--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
           android:versionCode="15"
           android:versionName="2.4">
 
+  <uses-permission
+      android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
   <application
     android:allowBackup="true"
     android:largeHeap="true"
@@ -16,7 +19,8 @@
       android:name="org.firstinspires.ftc.robotcontroller.internal.FtcRobotControllerActivity"
       android:configChanges="orientation|screenSize"
       android:label="@string/app_name"
-      android:launchMode="singleTask" >
+      android:launchMode="singleTask"
+      android:screenOrientation="portrait" >
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
